<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

   <item android:id="@+id/keyboard_down"
        android:title="@string/Keyboard"
        android:icon="@drawable/keyboard_image"
        android:showAsAction="always" />
    
    <item
        android:id="@+id/ctrl_events"
        android:title="ctrl"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always" >
    
     <!-- "file" submenu -->
        <menu>

            <item android:id="@+id/howto"
                  android:title="@string/howto" />
            <item android:id="@+id/about"
                  android:title="@string/about" >
                  
				<menu>
	
					<group android:checkableBehavior="all">
						<item android:id="@+id/red"
						android:title="ctrl" />
						<item android:id="@+id/blue"
						android:title="alt" />
						<item android:id="@+id/blue2"
						android:title="supr" />
					</group>
					
					<item android:id="@+id/aboutf"
					      android:title="about F4" />
	            
	                
	         	</menu>
         	
        	</item>
                
        </menu>
    </item>
    
	<item android:id="@+id/center_image"
	 android:title="@string/center_image"
	 android:icon="@drawable/image_center"
	 android:showAsAction="always" />
	
	<item android:id="@+id/help_down"
	 android:title="@string/help"
	 android:icon="@drawable/helpsymbol"
	 android:showAsAction="always" />
	   
	<item android:id="@+id/disconnect"
	 android:title="@string/disconnect"
	 android:icon="@drawable/disconnect_image"
	 android:showAsAction="always" />

</menu>